--- a/pages/Tutorials/Basics/Terminal.mdx
+++ b/pages/Tutorials/Basics/Terminal.mdx
@@ -10,9 +10,25 @@ import { Callout } from 'nextra-theme-docs'
 
 # Tutorial: Terminal Basics
 
-## Introduction
+## Overview
 
 The terminal, also known as the command-line interface (CLI), is a text-based interface that allows you to interact with your computer's operating system. By entering commands in the terminal, you can perform a wide range of tasks such as file management, system administration, and software installation. In this tutorial, you'll learn the basics of using the terminal, including some common commands to help you get started.
+
+## Tutorial Objectives
+
+- Learn basic terminal commands for managing files and directories
+- Understand how to connect to a remote server using SSH
+- Know how to transfer files between your local machine and a remote server using SCP
+
+## Limitations
+
+This tutorial is intended for beginners who have little to no experience using the command line interface. It covers basic commands and concepts and is not meant to be an exhaustive guide to using the terminal.
+
+## Other Resources
+
+- [Linux Command Line Basics](https://ubuntu.com/tutorials/command-line-basics)
+- [Introduction to the Mac OS X Command Line](https://blog.teamtreehouse.com/introduction-to-the-mac-os-x-command-line)
+- [Windows Command Prompt Tutorial](https://www.makeuseof.com/tag/a-beginners-guide-to-the-windows-command-line/)
 
 ## Download and Installation
 
